--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -14,7 +14,7 @@
     "automation": "Automation",
     "appliances": "Appliances",
     "add_appliances": "Add appliances.",
-    "appliance_things_to_do": "THINGS TO DO",
+    "appliance_things_to_do": "DISCOVER MORE",
     "favorites": "FAVORITE",
     "more": "MORE",
     "rooms": "Rooms",
@@ -2241,7 +2241,7 @@
     "super_cool_upper_camel_case": "Super Cool",
     "super_freeze_upper_camel_case": "Super Freeze",
     "input_password_cdc_tips": "The password must be 8 to 20 characters long and consist of at least 1 number, 1 capital letter, 1 small letter, and 1 special character (#?!@$%^&*-).",
-    "self_pump_setup_1": "Power off the heap pump, long press On/Off button and Down button at the same time for 3 seconds, then the Wi-Fi light will flash.",
+    "self_pump_setup_1": "Turn off the heap pump, long press On/Off button and Down button at the same time for 3 seconds, then the Wi-Fi light will flash.",
     "self_pump_setup_2": "Connect to Wi-Fi according to tips displayed on the APP. When the connection is successful, the Wi-Fi light will be on.",
     "no_favor": "No favorites",
     "unpair": "Unpair",
@@ -4660,5 +4660,16 @@
     "CL_SL_CM_energy_monitor": "GO TO ENERGY MONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Name as D**CW, like D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "Name as DH-**, like DH-12W, DH-16W",
-    "CL_CF_CS_searching_device_near_you": "Searching for devices near you"
+    "CL_CF_CS_searching_device_near_you": "Searching for devices near you",
+    "CL_DV_HOB_step2_residual_reminder": "There is residual hear left on the zone you selected. For best result we suggest you select a colder cooking zone.",
+    "CL_CF_HP_wine_management": "Wine Management",
+    "CL_CF_HP_add_card_key": "add card",
+    "CL_DV_HOB_filter_no_data_title": "No filters active",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "Your device doesn't have any filters active. Go to device settings for more information.",
+    "CL_CF_CS_replace_sn_error": "Can not change sn, has not bind relation.",
+    "CL_CF_FM_add_what_you_want": "Add what you want",
+    "CL_DV_RF_x_hours_before_the_plan": "** hours before the plan",
+    "CL_CF_CO_select_time_tips": "Please select a start and end time!",
+    "CL_SL_CM_recommended_program": "Recommended",
+    "CL_SL_CM_rpm": "rpm"
 }
