--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -14,7 +14,7 @@
     "automation": "Automatización",
     "appliances": "Electrodomésticos",
     "add_appliances": "Añade electrodomésticos.",
-    "appliance_things_to_do": "COSAS QUE HACER",
+    "appliance_things_to_do": "DESCUBRE MÁS",
     "favorites": "FAVORITO",
     "more": "MÁS",
     "rooms": "Habitaciones",
@@ -2181,7 +2181,7 @@
     "td22_delayed_drying": "Secado retardado",
     "wm22_wash_will_start_in": "El lavado comenzará en ##",
     "ac_continue_new": "Continuo",
-    "share_device_f_d": "Compartir dispositivo",
+    "share_device_f_d": "Partilhar dispositivo",
     "ac_checking_new": "Comprobación de",
     "last_exam": "Último examen",
     "ac_result": "Resultado",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "Lo sentimos, el programa no puede enviar, por favor encienda su dispositivo.",
     "CL_SL_CM_energy_monitor": "IR AL MONITOR DE ENERGÍA",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nombre como D**CW, como D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Nombre como DH-**, como DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Buscando dispositivos cerca de ti",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Gestión del vino",
+    "CL_CF_HP_add_card_key": "Agregar tarjeta",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "No se puede cambiar sn, no tiene relación de enlace.",
+    "CL_CF_FM_add_what_you_want": "Añade lo que quieras",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "Seleccione una fecha de inicio y fin.",
+    "CL_SL_CM_recommended_program": "Recomendado",
+    "CL_SL_CM_rpm": "RPM"
 }
