--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -14,7 +14,7 @@
     "automation": "اتوماسیون",
     "appliances": "محصولات",
     "add_appliances": "محصولات  را اضافه کنید.",
-    "appliance_things_to_do": "امکانات نرم افزار",
+    "appliance_things_to_do": "بیشتر کشف کنید",
     "favorites": "موارد دلخواه",
     "more": "موارد دیگر",
     "rooms": "اتاق‌ها",
@@ -2858,7 +2858,7 @@
     "bake_step_gratin_below": "گراتن از زیر",
     "update_device_firmware": "به روز رسانی سیستم عامل دستگاه",
     "app_update_title": "آپدیت اپلیکیشن",
-    "air_care": "از طریق تکنولوژی راه اندازی اینورتر سریع QSD، کمپرسور می تواند در یک زمان کوتاه به بالاترین فرکانس برسد و به گرمایش / سرمایش سریع برسد.",
+    "air_care": "مراقبت از هوا",
     "not_good": "خوب نیست",
     "vir_3d": "اتاق های مجازی سه بعدی",
     "no_device": "دستگاهی برای بهینه سازی وجود ندارد",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "با عرض پوزش، برنامه نمی تواند ارسال شود، لطفا دستگاه خود را روشن کنید.",
     "CL_SL_CM_energy_monitor": "به مانیتور انرژی بروید",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "نام D**CW، مانند D12CW، D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "نام DH-**، مانند DH-12W، DH-16W",
+    "CL_CF_CS_searching_device_near_you": "جستجو برای دستگاه های نزدیک شما",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "مدیریت شراب",
+    "CL_CF_HP_add_card_key": "اضافه کردن کارت",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "نمی تواند sn را تغییر دهد، رابطه bind ندارد.",
+    "CL_CF_FM_add_what_you_want": "آنچه را که می خواهید اضافه کنید",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "لطفاً تاریخ شروع و پایان را انتخاب کنید!",
+    "CL_SL_CM_recommended_program": "توصیه می شود",
+    "CL_SL_CM_rpm": "دور در دقیقه"
 }
