--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -14,7 +14,7 @@
     "automation": "Automazione",
     "appliances": "Elettrodomestici",
     "add_appliances": "Aggiungi elettrodomestici.",
-    "appliance_things_to_do": "COSE DA FARE",
+    "appliance_things_to_do": "SCOPRI DI PIÙ",
     "favorites": "PREFERITO",
     "more": "ALTRO",
     "rooms": "Stanze",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "Spiacenti, il programma non può inviare, accendi il dispositivo.",
     "CL_SL_CM_energy_monitor": "VAI A ENERGY MONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nome come D**CW, come D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Nome come DH-**, come DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Ricerca dispositivi vicino a te",
+    "CL_DV_HOB_step2_residual_reminder": "Nella zona selezionata è rimasto un residuo di udito. Per un risultato ottimale, si consiglia di selezionare una zona di cottura più fredda.",
+    "CL_CF_HP_wine_management": "Gestione del vino",
+    "CL_CF_HP_add_card_key": "aggiungere carta",
+    "CL_DV_HOB_filter_no_data_title": "Nessun filtro attivo",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "Il dispositivo non ha filtri attivi. Per ulteriori informazioni, andare alle impostazioni del dispositivo.",
+    "CL_CF_CS_replace_sn_error": "Non è possibile modificare sn, non è presente alcuna relazione vincolante.",
+    "CL_CF_FM_add_what_you_want": "Aggiungi ciò che vuoi",
+    "CL_DV_RF_x_hours_before_the_plan": "** ore prima del piano",
+    "CL_CF_CO_select_time_tips": "Selezionare un orario di inizio e di fine!",
+    "CL_SL_CM_recommended_program": "Raccomandato",
+    "CL_SL_CM_rpm": "giri al minuto"
 }
