--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -14,7 +14,7 @@
     "automation": "Routines",
     "appliances": "Apparaten",
     "add_appliances": "Voeg apparaten toe.",
-    "appliance_things_to_do": "DINGEN DIE U KUNT DOEN",
+    "appliance_things_to_do": "ONTDEK MEER",
     "favorites": "FAVORIET",
     "more": "MEER",
     "rooms": "Ruimtes",
@@ -287,7 +287,7 @@
     "pind_function_hestan_heat": "Opwarmen en frituren",
     "pind_set_temperature": "Ingestelde temperatuur",
     "pind_current_temp": "Huidige temperatuur",
-    "pind_stop_watch_hours": "u.",
+    "pind_stop_watch_hours": "u",
     "pind_stop_watch_minutes": "min.",
     "pind_stop_watch_seconds": "sec.",
     "pind_off": "UITGESCHAKELD",
@@ -461,7 +461,7 @@
     "circulation_mode": "Circulatie stand",
     "appliance_information": "Apparaat informatie",
     "waranty_information": "Garantie informatie",
-    "h": "u.",
+    "h": "u",
     "min": "min.",
     "set_timer": "TIMER INSTELLEN",
     "warm": "WARM",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "Sorry, het programma kan niet verzenden. Schakel uw apparaat in.",
     "CL_SL_CM_energy_monitor": "GA NAAR ENERGIEMONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Naam als D**CW, zoals D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Naam als DH-**, zoals DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Zoeken naar apparaten bij u in de buurt",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Wijnbeheer",
+    "CL_CF_HP_add_card_key": "kaart toevoegen",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "Kan sn niet veranderen, heeft geen bindende relatie.",
+    "CL_CF_FM_add_what_you_want": "Voeg toe wat je wilt",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "Selecteer een start- en einddatum!",
+    "CL_SL_CM_recommended_program": "Aanbevolen",
+    "CL_SL_CM_rpm": "toerental"
 }
