--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -14,7 +14,7 @@
     "automation": "การทำงานอัตโนมัติ",
     "appliances": "อุปกรณ์",
     "add_appliances": "เพิ่มอุปกรณ์",
-    "appliance_things_to_do": "สิ่งที่ต้องทำ",
+    "appliance_things_to_do": "ค้นพบเพิ่มเติม",
     "favorites": "ที่ชื่นชอบ",
     "more": "มากกว่า",
     "rooms": "ห้อง",
@@ -2538,7 +2538,7 @@
     "device_all_notification_tips": "คุณจะไม่ได้รับการแจ้งเตือนใด ๆ รวมถึงการอัปเดตที่เกี่ยวข้องกับอุปกรณ์ทั้งหมด ตลอดจนการแจ้งเตือนด่วนที่ต้องดำเนินการทันที",
     "device_urgent_nmotification_tips": "เครื่องปรับอากาศแบบท่อลม",
     "device_none_notification_tips": "เงียบ",
-    "ac_duct_type": "รับการแจ้งเตือนและสัญญาณเตือนแบบพุชบนโทรศัพท์ของคุณ แม้ว่าคุณจะไม่ได้ใช้งานแอป ConnectLife ก็ตาม",
+    "ac_duct_type": "เครื่องปรับอากาศแบบท่อ",
     "duct_silent": "แสดงเฉพาะที่ยังไม่ได้อ่าน",
     "timer_name_not_less_2_length": "ตัวจับเวลาไม่น้อยกว่า 2 ตัวอักษร",
     "push_notifications_settings_tips": "ผลิตภัณฑ์นม",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "ขออภัยโปรแกรมไม่สามารถส่งได้ กรุณาเปิดอุปกรณ์ของคุณ",
     "CL_SL_CM_energy_monitor": "ไปที่ตัวตรวจสอบพลังงาน",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "ชื่อ D**CW เช่น D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "ชื่อ DH-** เช่น DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "ค้นหาอุปกรณ์ใกล้ตัวคุณ",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "การจัดการไวน์",
+    "CL_CF_HP_add_card_key": "เพิ่มการ์ด",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "ไม่สามารถเปลี่ยน sn ได้ ไม่ได้ผูกความสัมพันธ์",
+    "CL_CF_FM_add_what_you_want": "เพิ่มสิ่งที่คุณต้องการ",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "",
+    "CL_SL_CM_recommended_program": "ที่แนะนำ",
+    "CL_SL_CM_rpm": "รอบต่อนาที"
 }
