--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -14,7 +14,7 @@
     "automation": "智慧管家",
     "appliances": "電器",
     "add_appliances": "添加電器。",
-    "appliance_things_to_do": "操作清單",
+    "appliance_things_to_do": "發現更多",
     "favorites": "我的最愛",
     "more": "更多",
     "rooms": "房間",
@@ -2241,7 +2241,7 @@
     "super_cool_upper_camel_case": "速冷",
     "super_freeze_upper_camel_case": "速凍",
     "input_password_cdc_tips": "密碼必須由8至20個字符組成，其中至少包含1個數字、1個大寫字母、1個小寫字母和1個特殊字符(#?!@$%^&*-)。",
-    "self_pump_setup_1": "關閉堆泵電源，同時長按 On/Off 按鈕和 Down 按鈕 3 秒，然後 Wi-Fi 指示燈閃爍。",
+    "self_pump_setup_1": "將熱泵關機，同時長按 On/Off 按鈕和 Down 按鈕 3 秒，然後 Wi-Fi 指示燈閃爍。",
     "self_pump_setup_2": "根據APP提示連接Wi-Fi。連線成功後，Wi-Fi 指示燈會亮起。",
     "no_favor": "没有喜爱",
     "unpair": "解绑",
@@ -2485,7 +2485,7 @@
     "security_upgrade": "安全升级",
     "send_reset_link": "发送重置链接",
     "sent_reset_email": "我们已经发重置密码链接至 %s",
-    "sent_reset_email_content": "返回ConnectLife",
+    "sent_reset_email_content": "請按照電子郵件中的說明重設您的密碼。成功重設密碼後，返回 ConnectLife。",
     "device_status_program_preheat": "预热中",
     "resend_pwd_reset_email": "重新发送密码重置邮箱",
     "add_a_timer": "添加计时器",
@@ -4422,7 +4422,7 @@
     "CL_SL_CM_redo_the_questionnaire": "重做問卷",
     "CL_SL_CM_laundry_title": "洗衣店",
     "CL_SL_CM_laundry_services_detail": "歡迎！回答以下問題可協助我們推薦更好的洗衣計劃，增強您的整體洗衣體驗。",
-    "CL_SL_CM_recommended_program_guide": "推薦節目指南",
+    "CL_SL_CM_recommended_program_guide": "建議程序指引",
     "CL_SL_CM_let's_get_started": "讓我們開始吧！",
     "CL_SL_CM_thank_you": "謝謝你",
     "CL_SL_CM_questionnaire_congratulations": "恭喜您完成問卷，我們將根據問卷向您推薦合適的洗衣方案，請勾選「推薦」。",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "抱歉，程式無法傳送，請開啟您的裝置。",
     "CL_SL_CM_energy_monitor": "轉到能源監控器",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "名稱為D**CW，如D12CW、D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "名稱為DH-**，如DH-12W、DH-16W",
+    "CL_CF_CS_searching_device_near_you": "搜尋您附近的設備",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "葡萄酒管理",
+    "CL_CF_HP_add_card_key": "添加卡",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "不能改變sn，沒有綁定關係。",
+    "CL_CF_FM_add_what_you_want": "添加您想要的內容",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "請選擇開始和結束日期！",
+    "CL_SL_CM_recommended_program": "建議程序",
+    "CL_SL_CM_rpm": "轉速"
 }
