--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -14,7 +14,7 @@
     "automation": "智慧管家",
     "appliances": "电器",
     "add_appliances": "添加电器。",
-    "appliance_things_to_do": "操作列表",
+    "appliance_things_to_do": "发现更多",
     "favorites": "我的最爱",
     "more": "更多",
     "rooms": "房间",
@@ -2241,7 +2241,7 @@
     "super_cool_upper_camel_case": "速冷",
     "super_freeze_upper_camel_case": "速冻",
     "input_password_cdc_tips": "密码必须由8至20个字符组成，其中至少包含1个数字、1个大写字母、1个小写字母和1个特殊字符(#?!@$%^&*-)。",
-    "self_pump_setup_1": "关闭堆泵电源，同时长按开/关按钮和向下按钮3秒钟，然后Wi-Fi灯将闪烁。",
+    "self_pump_setup_1": "将热泵关机，同时长按开/关按钮和向下按钮3秒钟，然后Wi-Fi灯将闪烁。",
     "self_pump_setup_2": "根据APP提示连接Wi-Fi，连接成功后Wi-Fi指示灯亮起。",
     "no_favor": "没有喜爱",
     "unpair": "解绑",
@@ -2485,7 +2485,7 @@
     "security_upgrade": "安全升级",
     "send_reset_link": "发送重置链接",
     "sent_reset_email": "我们已经发重置密码链接至 %s",
-    "sent_reset_email_content": "返回ConnectLife",
+    "sent_reset_email_content": "请按照电子邮件中的说明重置您的密码。成功重置密码后，请返回 ConnectLife。",
     "device_status_program_preheat": "预热中",
     "resend_pwd_reset_email": "重新发送密码重置邮箱",
     "add_a_timer": "添加计时器",
@@ -4422,7 +4422,7 @@
     "CL_SL_CM_redo_the_questionnaire": "重新做问卷",
     "CL_SL_CM_laundry_title": "洗衣店",
     "CL_SL_CM_laundry_services_detail": "欢迎！回答以下问题可帮助我们推荐更好的洗衣方案，提升您的整体洗衣体验。",
-    "CL_SL_CM_recommended_program_guide": "推荐节目指南",
+    "CL_SL_CM_recommended_program_guide": "推荐程序指引",
     "CL_SL_CM_let's_get_started": "让我们开始吧！",
     "CL_SL_CM_thank_you": "谢谢你",
     "CL_SL_CM_questionnaire_congratulations": "恭喜您完成问卷调查，我们将根据问卷调查结果为您推荐合适的洗衣方案，请在“推荐”处勾选。",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "抱歉，程序无法发送，请打开您的设备。",
     "CL_SL_CM_energy_monitor": "进入能源监测",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "命名为 D**CW，例如 D12CW、D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "命名为 DH-**，如 DH-12W、DH-16W",
+    "CL_CF_CS_searching_device_near_you": "搜索您附近的设备",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "葡萄酒管理",
+    "CL_CF_HP_add_card_key": "添加卡片",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "无法更改sn，尚未绑定关系。",
+    "CL_CF_FM_add_what_you_want": "添加您想要的内容",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "请选择开始和结束日期！",
+    "CL_SL_CM_recommended_program": "推荐程序",
+    "CL_SL_CM_rpm": "转速"
 }
