--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -14,7 +14,7 @@
     "automation": "التشغيل الآلي",
     "appliances": "الأجهزة",
     "add_appliances": "إضافة أجهزة",
-    "appliance_things_to_do": "أمور يجب فعلها",
+    "appliance_things_to_do": "اكتشف المزيد",
     "favorites": "مفضل",
     "more": "المزيد",
     "rooms": "الغرف",
@@ -2241,7 +2241,7 @@
     "super_cool_upper_camel_case": "تبريد سريع",
     "super_freeze_upper_camel_case": "تجميد خارق",
     "input_password_cdc_tips": "يجب أن تتكون كلمة المرور من 8 إلى 20 حرفًا وأن تتكون من رقم واحد على الأقل وحرف كبير وحرف صغير واحد وحرف خاص واحد (#؟! @ $٪ ^ & * -).",
-    "self_pump_setup_1": "قم بإيقاف تشغيل مضخة الكومة، واضغط لفترة طويلة على زر التشغيل/الإيقاف والزر السفلي في نفس الوقت لمدة 3 ثوانٍ، ثم يومض ضوء Wi-Fi.",
+    "self_pump_setup_1": "قم بإيقاف مضخة الكومة، واضغط مع الاستمرار على زر التشغيل/الإيقاف والزر السفلي معًا لمدة 3 ثوانٍ، ثم سيومض ضوء Wi-Fi.",
     "self_pump_setup_2": "اتصل بشبكة Wi-Fi وفقًا للنصائح المعروضة على التطبيق. عندما يتم الاتصال بنجاح، سيضيء مصباح Wi-Fi.",
     "no_favor": "لا المفضلة",
     "unpair": "إلغاء الاقتران",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "عذرا، البرنامج لا يستطيع الإرسال، يرجى تشغيل جهازك.",
     "CL_SL_CM_energy_monitor": "انتقل إلى مراقبة الطاقة",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "الاسم مثل D**CW، مثل D12CW، D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "الاسم مثل DH-**، مثل DH-12W، DH-16W",
+    "CL_CF_CS_searching_device_near_you": "البحث عن الأجهزة القريبة منك",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "إدارة النبيذ",
+    "CL_CF_HP_add_card_key": "إضافة بطاقة",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "لا يمكن تغيير sn، ولم يتم ربط العلاقة.",
+    "CL_CF_FM_add_what_you_want": "أضف ما تريد",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "يرجى تحديد تاريخ البدء والانتهاء!",
+    "CL_SL_CM_recommended_program": "مُستَحسَن",
+    "CL_SL_CM_rpm": "دورة في الدقيقة"
 }
