--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -14,7 +14,7 @@
     "automation": "Routine",
     "appliances": "Appareils",
     "add_appliances": "Ajouter des appareils",
-    "appliance_things_to_do": "CHOSES À FAIRE",
+    "appliance_things_to_do": "DÉCOUVREZ PLUS",
     "favorites": "FAVORIS",
     "more": "PLUS",
     "rooms": "Pièces",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "Désolé, le programme ne peut pas envoyer, veuillez allumer votre appareil.",
     "CL_SL_CM_energy_monitor": "ACCÉDER AU MONITEUR D'ÉNERGIE",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nom comme D**CW, comme D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Nom comme DH-**, comme DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Recherche d'appareils près de chez vous",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Gestion du vin",
+    "CL_CF_HP_add_card_key": "ajouter une carte",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "Impossible de modifier le sn, n'a pas de relation de liaison.",
+    "CL_CF_FM_add_what_you_want": "Ajoutez ce que vous voulez",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "Veuillez sélectionner une date de début et une date de fin !",
+    "CL_SL_CM_recommended_program": "Recommandé",
+    "CL_SL_CM_rpm": "tr/min"
 }
