--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -14,7 +14,7 @@
     "automation": "אוטומציה",
     "appliances": "מכשירים",
     "add_appliances": "להוסיף מכשירים.",
-    "appliance_things_to_do": "משימות",
+    "appliance_things_to_do": "גלה עוד",
     "favorites": "אהוב",
     "more": "עוד",
     "rooms": "חדרים",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "מצטערים, התוכנית לא יכולה לשלוח, אנא הפעל את המכשיר שלך.",
     "CL_SL_CM_energy_monitor": "עבור ל- ENERGY MONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "שם בתור D**CW, כמו D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "שם כ-DH-**, כמו DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "מחפש מכשירים קרובים אליך",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "ניהול יין",
+    "CL_CF_HP_add_card_key": "להוסיף כרטיס",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "לא יכול לשנות sn, אין קשר קשר.",
+    "CL_CF_FM_add_what_you_want": "הוסף מה שאתה רוצה",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "",
+    "CL_SL_CM_recommended_program": "מוּמלָץ",
+    "CL_SL_CM_rpm": "סל\"ד"
 }
