--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -14,7 +14,7 @@
     "automation": "Automatisering",
     "appliances": "Husholdningsapparater",
     "add_appliances": "Legg til enheter.",
-    "appliance_things_to_do": "TING Å GJØRE",
+    "appliance_things_to_do": "OPPDA MER",
     "favorites": "FAVORITT",
     "more": "MER",
     "rooms": "Rom",
@@ -4659,6 +4659,17 @@
     "CL_SL_CM_progam_send_warning2": "Beklager, programmet kan ikke sende, vennligst slå på enheten.",
     "CL_SL_CM_energy_monitor": "GÅ TIL ENERGY MONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Navn som D**CW, som D12CW, D16CW",
-    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Navn som DH-**, som DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Søker etter enheter nær deg",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Vinforvaltning",
+    "CL_CF_HP_add_card_key": "legg til kort",
+    "CL_DV_HOB_filter_no_data_title": "",
+    "CL_DV_HOB_CL_DV_HOB_filter_no_data_content": "",
+    "CL_CF_CS_replace_sn_error": "Kan ikke endre sn, har ikke binde relasjon.",
+    "CL_CF_FM_add_what_you_want": "Legg til det du ønsker",
+    "CL_DV_RF_x_hours_before_the_plan": "",
+    "CL_CF_CO_select_time_tips": "Velg en start- og sluttdato!",
+    "CL_SL_CM_recommended_program": "Anbefalt",
+    "CL_SL_CM_rpm": "rpm"
 }
